--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -37,46 +37,22 @@
       </canvas>
    </div>
    <div class="sample">
-      Cone TRIANGLES (correct), <br/>
+      <b>Cone TRIANGLES (correct), <br/>
       Normals simple, smooth gradient<br/>
-      Tip normal set to 0,0,0<br/>
-      Migration in progress<br/>
       Light change direction<br/>
+      Migrated: to merge</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1_animate.js"></script>
       </canvas>
    </div>
    <div class="sample">
-      Cone TRIANGLES (correct), <br/>
+      <b>Cone TRIANGLES (correct), <br/>
       Normals simple, no gradient, <br/>
-      Tip normal set to one side normal.<br/>
+      Tip normal to whole side.<br/>
       Light change direction<br/>
+      Migrated: to be merged</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1_animate2.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-            out vec3 nm;
-            void main()
-            {
-               gl_Position = coordinates;
-               nm = inputNormal;
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-            out vec4 fragColor;
-            uniform vec2  lightDirection; // Direction -> changing
-            const vec3  greenColor = vec3(0.0,  1.0,  0.0);
-            in vec3 nm;
-            void main()
-            {
-               float prod   =  -dot ( normalize(vec3(lightDirection, -1.0)),   normalize(nm));
-               fragColor    = vec4 (greenColor * prod,  1.0);
-            }
-         </script>
       </canvas>
    </div>
    <div class="sample">
@@ -85,69 +61,15 @@
       Normals simple <br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-
-            out vec3 nm;
-            void main()
-            {
-               gl_Position = coordinates;
-               nm = inputNormal;
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-
-            out vec4 fragColor;
-            const vec3  lightDirection = normalize(vec3(-1.0,  -1.0,  -1.0)); // Direction -> right up forward
-            const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
-
-            in vec3 nm;
-            void main() 
-            {
-               float prod   =  -dot (lightDirection,   normalize(nm));
-               fragColor = vec4 (greenColor * prod,  1.0);
-            }
-         </script>
       </canvas>
    </div>
    <div class="sample">
-      </br>
       Cone TRIANGLES (correct), </br>
       Geometry <br/>
+      Migration in progress <br/>
+      To make left handed <br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1_geometry.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-            out vec3 nm;
-            void main()
-            {
-               gl_Position = coordinates;
-               nm = inputNormal;
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-
-            out vec4 fragColor;
-
-            const vec3  lightDirection = vec3(-1.0,  -1.0,  -1.0); // Direction -> right up forward
-            const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
-
-            in vec3 nm;
-            void main() 
-            {
-               //find the cos of angle between plane normal and light direction
-               float prod   =  dot (-1.0 * normalize(lightDirection),   normalize(nm));
-               fragColor = vec4 (greenColor * prod,  1.0);
-            }
-         </script>
       </canvas>
    </div><br/>
    <div class="sample">
